--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Lovable" />
 
     <!-- TODO: Update og:title to match your application name -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     
     
     <meta property="og:type" content="website" />
